# butter

./: .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rule-types.md
.github/workflows/: build-binaries.yml  ci.yml  release.yml
assets/: logo.aseprite
scripts/: install-appimage.sh  install-tar.sh
src/: config.rs  git.rs  main.rs
src/commands/: check.rs  test.rs
src/output/: printer.rs
src/rules/: file.rs  file_group.rs  file_name.rs  mod.rs  result.rs
xtask/: Cargo.toml
xtask/src/: main.rs
