[package]
name = "butter"
version = "1.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
directories = "6.0.0"
env_logger = "0.11.10"
include_dir = "0.7.4"
log = "0.4.32"
regex = "1.12.4"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.8.26"
strum = "0.28.0"
strum_macros = "0.28.0"

[workspace]
members = [
    ".",
    "xtask",
]

[lib]
path = "src/lib.rs"
test = false
